--- a/backend/.env
+++ b/backend/.env
@@ -9,10 +9,10 @@ PORT=5000
 SECRET_JWT=MGLsupersecret
 
 # Email Configs
-EMAIL_SERVICE=gmail
+EMAIL_SERVICE=smtp2go
 EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=465
-EMAIL_USER= Habte Selassie Fitsum
+EMAIL_PORT=2525
+EMAIL_USER=Habte Selassie
 EMAIL_PWD=habtuy6869
 EMAIL=habtuchelsea1000@gmail.com
 
