--- a/backend/.env
+++ b/backend/.env
@@ -11,10 +11,12 @@ SECRET_JWT=MGLsupersecret
 # Email Configs
 EMAIL_SERVICE=smtp2go
 EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=2525
-EMAIL_USER=Habte Selassie
+EMAIL_PORT=465
+EMAIL_USER=habtuarsenal28@gmail.com
 EMAIL_PWD=habtuy6869
-EMAIL=habtuchelsea1000@gmail.com
+EMAIL=habtuarsenal28@gmail.com
+EMAIL_FROM = habtuchelsea1000@gmail.com       
+EMAIL_TO =habtuarsenal28@gmail.com
 
 #EMAIL_SERVICE=smtp2go
 #EMAIL_PORT=2525
